Add a couple of other observations

--- a/redblackgraph/redblackgraph.ipynb
+++ b/redblackgraph/redblackgraph.ipynb
@@ -283,6 +283,8 @@
     "* determining whether *x* is an ancestor of *y* is **O**(1) and provided by *A<sub>rb</sub><sup>+</sup>*<sub>x,y</sub>\n",
     "* determining whether *x* is a descendant of *y* is **O**(1) and provided by *A<sub>rb</sub><sup>+</sup>*<sub>y,x</sub>\n",
     "* determining whether *x* is related to *y* is **O**(*m*) where *m* is the expected number of ancestors and *m* << |*V*|. Relationship is determined by element-wise comparision of the non zero elements of row vectors of x and y. When an element has both non zero in both row vectors the relationship is determined by the *pedigree numbers* of the respective row vector elements. (see xxxx)\n",
+    "* diameter of the graph is generation(max(*A<sub>rb</sub><sup>+</sup>*<sub>i,j</sub>))\n",
+    "* number of black vertices = Tr(*A<sub>rb</sub><sup>+</sup>*)\n",
     "\n",
     "\n"
    ]
