Get jupyter working in the dev container

--- a/redblackgraph/redblackgraph.ipynb
+++ b/redblackgraph/redblackgraph.ipynb
@@ -279,7 +279,7 @@
     "* row vectors represent *downstream* view for a given vertex\n",
     "* column vectors represent *upstream* view for a given vertex\n",
     "* row vectors representing siblings will be identical\n",
-    "* column vectors representing siblings may be independant if either of the siblings have offspring represented in the graph\n",
+    "* column vectors representing siblings will be independant if either of the siblings have offspring represented in the graph\n",
     "* determining whether *x* is an ancestor of *y* is **O**(1) and provided by *A<sub>rb</sub><sup>+</sup>*<sub>x,y</sub>\n",
     "* determining whether *x* is a descendant of *y* is **O**(1) and provided by *A<sub>rb</sub><sup>+</sup>*<sub>y,x</sub>\n",
     "* determining whether *x* is related to *y* is **O**(*m*) where *m* is the expected number of ancestors and *m* << |*V*|. Relationship is determined by element-wise comparision of the non zero elements of row vectors of x and y. When an element has both non zero in both row vectors the relationship is determined by the *pedigree numbers* of the respective row vector elements. (see xxxx)\n",
@@ -430,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
