fix error in warshall algorithm

--- a/redblackgraph/redblackgraph.ipynb
+++ b/redblackgraph/redblackgraph.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
     "            for j in range(n):\n",
     "                element_avos = 0\n",
     "                if W[i][k] > 1 and W[k][j] > 1:\n",
-    "                    W[i][j] = avos(W[i][k], W[k][j])\n",
+    "                    W[i][j] = min(W[i][j], avos(W[i][k], W[k][j])) if not W[i][j] == 0 else avos(W[i][k], W[k][j])\n",
     "                else:\n",
     "                    W[i][j] = W[i][j]\n",
     "    return W"
@@ -228,9 +228,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 1,
    "metadata": {
-    "hide_input": true
+    "hide_input": false
    },
    "outputs": [],
    "source": [
