Additions to future considerations

--- a/redblackgraph/redblackgraph.ipynb
+++ b/redblackgraph/redblackgraph.ipynb
@@ -395,11 +395,21 @@
    "source": [
     "## Areas of Further investigation\n",
     "\n",
+    "* Determinants\n",
     "* Eigenvalues\n",
     "* Loop prevention\n",
     "* *avos* properties (commutitivity, associativity, distribution, identity, inverse, etc.)\n",
     "* Spectral Graph Theory\n",
-    "* Explore ideas to reduce dimensionality (embedding similar to word2vec, etc.)"
+    "* Explore ideas to reduce dimensionality (embedding similar to word2vec, etc.)\n",
+    "* Axioms of linear algebra:\n",
+    "** u + (v + w) = (u + v) + w\n",
+    "** v + w = w + v\n",
+    "** There is a vector *0* such that *0* + v = v for all v\n",
+    "** For every vector v there is a vector -v so that v + (-v) = *0*\n",
+    "** a(bv) = (ab)v\n",
+    "** 1v = v\n",
+    "** a(v + w) = av + aw\n",
+    "** (a + b)v = av + bv"
    ]
   },
   {
