--- a/notebooks/redblackgraph.ipynb
+++ b/notebooks/redblackgraph.ipynb
@@ -265,9 +265,9 @@
     "    '''Computes the transitive closure of a Red Black adjacency matrix and as a side-effect, \n",
     "    the diameter.'''\n",
     "    \n",
-    "    ## Modification of stardard warshall algorithm:\n",
-    "    ## * Replaces innermost loop's: `W[i][j] = W[i][j] or (W[i][k] and W[k][j])`\n",
-    "    ## * Adds diameter calculation\n",
+    "    # Modification of stardard warshall algorithm:\n",
+    "    # * Replaces innermost loop's: `W[i][j] = W[i][j] or (W[i][k] and W[k][j])`\n",
+    "    # * Adds diameter calculation\n",
     "    n = len(M)\n",
     "    W = M\n",
     "    diameter = 0\n",
