Update base notebook to include algorithm to calculate relationships

--- a/notebooks/redblackgraph.ipynb
+++ b/notebooks/redblackgraph.ipynb
@@ -148,24 +148,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# %load ../redblackgraph/simple/generation.py\n",
     "def generation(pedigree_number):\n",
     "    '''Given a pedigree_number, representing a relationship from a \"root\" vertex to an \"ancester\" vertex,\n",
     "    return the number of edges that must be followed in order to \"walk\" from the \"root\" to the \"ancester\".'''\n",
     "    x = pedigree_number\n",
     "    gen = 0\n",
-    "    while (x > 1): \n",
+    "    while (x > 1):\n",
     "        x >>= 1\n",
-    "        gen+=1\n",
+    "        gen += 1\n",
     "    return gen\n",
+    "\n",
     "\n",
     "def get_traversal_path(pedigree_number):\n",
     "    '''Given a pedigree_number, representing a relationship from a \"root\" vertex to an \"ancester\" vertex,\n",
     "    return the traversal path of edges to red or black vertices to \"walk\" from the \"root\" to the \"ancesster\".\n",
-    "    \n",
+    "\n",
     "    For example, input of 14 results in ['b', 'b', 'r'] which indicates that starting at the \"root\" vertex, follow\n",
     "    the edge to the black vertex, then the edge to the black vertex then the edge to the red vertex.'''\n",
     "    x = pedigree_number\n",
@@ -174,7 +176,7 @@
     "    while (x > 1):\n",
     "        path.insert(0, 'b') if x & mask else path.insert(0, 'r')\n",
     "        x >>= 1\n",
-    "    return path"
+    "    return path\n"
    ]
   },
   {
@@ -218,25 +220,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# %load ../redblackgraph/simple/avos.py\n",
+    "from redblackgraph.simple import generation\n",
+    "\n",
     "def avos(x, y):\n",
-    "    '''The avos product is a transitive relationship operator. \n",
+    "    '''The avos product is a transitive relationship operator.\n",
     "    Given that:\n",
     "      - vertex a is related to vertex b by x\n",
     "      - vertex b is related to vertex c by y\n",
     "    This product should return the value indicating how a is related to c\n",
     "    '''\n",
-    "    \n",
+    "\n",
     "    # The domain of this function is all positive integers greater than 1\n",
     "    if x <= 1 or y <= 1:\n",
     "        raise ValueError(f'avos({x}, {y}) is not defined')\n",
-    "    \n",
-    "    # There are some edge cases that need to be considered, namely what is meant \n",
+    "\n",
+    "    # There are some edge cases that need to be considered, namely what is meant\n",
     "    generationNumber = generation(y)\n",
-    "    return (y & (2 **generationNumber - 1)) | (x << generationNumber)\n"
+    "    return (y & (2 ** generationNumber - 1)) | (x << generationNumber)\n"
    ]
   },
   {
@@ -257,14 +262,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# %load ../redblackgraph/simple/warshall.py\n",
+    "from redblackgraph.simple import generation\n",
+    "from redblackgraph.simple import avos\n",
+    "\n",
+    "\n",
     "def warshall(M):\n",
-    "    '''Computes the transitive closure of a Red Black adjacency matrix and as a side-effect, \n",
+    "    '''Computes the transitive closure of a Red Black adjacency matrix and as a side-effect,\n",
     "    the diameter.'''\n",
-    "    \n",
+    "\n",
     "    # Modification of stardard warshall algorithm:\n",
     "    # * Replaces innermost loop's: `W[i][j] = W[i][j] or (W[i][k] and W[k][j])`\n",
     "    # * Adds diameter calculation\n",
@@ -284,13 +294,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "hide_input": true
    },
    "outputs": [],
    "source": [
-    "#print(warshall([[0,2,3,0,0],[0,0,0,2,0],[0,0,1,0,0],[0,0,0,0,0],[2,0,0,0,1]]))"
+    "# from redblackgraph.simple import warshall\n",
+    "# print(warshall([[0,2,3,0,0],[0,0,0,2,0],[0,0,1,0,0],[0,0,0,0,0],[2,0,0,0,1]]))"
    ]
   },
   {
@@ -308,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "hide_input": true
    },
@@ -320,7 +331,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +384,6 @@
     "* column vectors representing siblings will be independant if either of the siblings have offspring represented in the graph\n",
     "* determining whether *x* is an ancestor of *y* is **O**(1) and provided by *A<sub>rb</sub><sup>+</sup>*\\[x, y\\]\n",
     "* determining whether *x* is a descendant of *y* is **O**(1) and provided by *A<sub>rb</sub><sup>+</sup>*\\[y, x\\]\n",
-    "* determining whether *x* is related to *y* is **O**(*m*) where *m* is the expected number of ancestors and *m* << |*V*|. Relationship is determined by element-wise comparision of the non zero elements of row vectors of x and y. Element-wise comparison yielding non zero in both row vectors indicates a common ancestor. The specific relationship is determined by the *pedigree numbers* of the respective row vector elements. (see xxxx)\n",
     "* diameter of the graph is given by generation(max(*A<sub>rb</sub><sup>+</sup>*\\[i, j\\]))"
    ]
   },
@@ -381,10 +391,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusions\n",
+    "### Calculating Relationship Between Two Rows in *A<sub>rb</sub><sup>+</sup>*\n",
     "\n",
-    "TODO: outline properties\n",
-    "TODO: outline \"am I related\""
+    "Given that row vectors in *A<sub>rb</sub><sup>+</sup>* provides the ancestry view for a given vertex, we can demonstrate a straight forward means of calculating relationship, or more specifically, the consanguinity between vertices. \n",
+    "\n",
+    "1. Given two row vectors from *A<sub>rb</sub><sup>+</sup>*, *u* and *v*, find the minimum of *u<sub>j</sub>* + v<sub>j</sub>* where both *u<sub>j</sub>* and v<sub>j</sub>* are non-zero. This yields two *pedigree numbers*, x and y, expressing the relationship of *u* and *v* to the nearest common ancestor, *vertex<sub>j-min</sub>\n",
+    "2. Determine the generational distance to the common ancestor, d<sub>u</sub> = generation(x) and d<sub>v</sub> = generation(y).\n",
+    "3. Using a Table of Consanguinity, calculate the relationship\n",
+    "\n",
+    "#### Observation\n",
+    "\n",
+    "* determining whether *x* is related to *y* is **O**(*m*) where *m* is the expected number of ancestors and *m* << |*V*| (assuming an efficient sparse matrix representation, otherwise it is **O**(|*V*))\n",
+    "\n",
+    "A simple implementation of calculate_relationship follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load ../redblackgraph/simple/calc_relationship.py\n",
+    "from redblackgraph.simple import generation\n",
+    "\n",
+    "def lookup_relationship(du, dv):\n",
+    "    removal = abs(du - dv)\n",
+    "    generational = min(du, dv)\n",
+    "\n",
+    "    if generational == 1:\n",
+    "        assert removal == 0\n",
+    "        return \"siblings\"\n",
+    "    if generational == 2 and not removal == 0:\n",
+    "        return \"aunt/uncle\"\n",
+    "    if removal == 0:\n",
+    "        return f\"{generational - 1} cousin\"\n",
+    "    return f\"{generational - 1} cousin {removal} removed\"\n",
+    "\n",
+    "def calculate_relationship(u, v):\n",
+    "    '''\n",
+    "    Determine if a relationship exists between u, v where u, v are row vectors of the transitive closure\n",
+    "    of a Red Black adjacency matrix\n",
+    "    :param u: row vector for vertex u\n",
+    "    :param v: row vector for vertex v\n",
+    "    :return: (Relationship designation, common ancestor vertex)\n",
+    "    '''\n",
+    "\n",
+    "    common_ancestor, (x, y) = min([e for e in enumerate(zip(u, v)) if e[1][0] > 1 and e[1][1] > 1],\n",
+    "                                  key=lambda x: x[1][0] + x[1][1],\n",
+    "                                  default=(-1, (0, 0)))\n",
+    "\n",
+    "    if common_ancestor == -1:\n",
+    "        return \"No Relationship\", -1\n",
+    "    return lookup_relationship(generation(x), generation(y)), common_ancestor\n"
    ]
   }
  ],
