About to give up on the {0, 1} on the diagonal and just go with {1}. While the idea of "encoding" reb/black into the vector has appeal (trace(A) = # of black nodes), etc. It's requiring too may special cases in the underlying math/algorithms.
This commit will checkpoint latest attempt. Things breakdown moving from warshall into linear algebra

--- a/notebooks/redblackgraph.ipynb
+++ b/notebooks/redblackgraph.ipynb
@@ -92,10 +92,11 @@
     "We define the Red-Black adjacency matrix as follows: \n",
     "* elements are 2 if there is an edge between any vertex and a red vertex\n",
     "* elements are 3 if there is an edge between any vertex and a black vertex \n",
-    "* diagonal elements are 0 if the vertex is red\n",
+    "* diagonal elements are -1 if the vertex is red\n",
     "* diagonal elements are 1 if the vertex is black \n",
     "\n",
     "Slightly more formally, with a graph of vertex set *V*, where a vertex may be colored either *Red* or *Black*, the Red-Black adjacency matrix is a square |*V*| x |*V*| matrix, *A<sub>rb</sub>*, such that *A<sub>rb<sub>ij</sub></sub>* is:\n",
+    "* -1 if *i* == *j* and $vertex_{i}$ is *Red*\n",
     "* 1 if *i* == *j* and $vertex_{i}$ is *Black*\n",
     "* 2 if there is an edge from $vertex_{i}$ to $vertex_{j}$ and $vertex_{j}$ is *Red*\n",
     "* 3 if there is an edge from $vertex_{i}$ to $vertex_{j}$ and $vertex_{j}$ is *Black*\n",
@@ -105,20 +106,16 @@
     "\n",
     "\\begin{vmatrix}\n",
     "1 & 0 & 2 & 3 \\\\\n",
-    "0 & 0 & 2 & 3 \\\\\n",
-    "0 & 0 & 0 & 0 \\\\\n",
+    "0 & -1 & 2 & 3 \\\\\n",
+    "0 & 0 & -1 & 0 \\\\\n",
     "0 & 0 & 0 & 1 \\\\\n",
     "\\end{vmatrix}\n",
     "\n",
     "### Observations\n",
     "\n",
     "\\begin{equation*}\n",
-    "|V_{black}| = trace(A_{rb})\n",
-    "\\end{equation*} \n",
-    "\n",
-    "\\begin{equation*}\n",
-    "|V_{red}| = |V| - trace(A_{rb})\n",
-    "\\end{equation*}"
+    "|V_{black}| - |V_{red}| = trace(A_{rb})\n",
+    "\\end{equation*} "
    ]
   },
   {
@@ -127,7 +124,7 @@
    "source": [
     "## Transitive Closure of a Red-Black Adjacency Matrix\n",
     "\n",
-    "Transitive closure for an adjacency matrix, *A*, results in a matrix, *A<sup>+</sup>* that shows all vertices that are reachable from any given vertex. We examine the correlary, given a Red Black adjacency matrix, *A<sub>rb</sub>*, by computing the transitive closure, *A<sub>rb</sub><sup>+</sup>*, that results not only in reachability, but explicit information about how one node is reachable from another, including number of edges required to traverse as well as the explicit traversal path. \n",
+    "Transitive closure for an adjacency matrix, $A$, results in a matrix, $A^+$ that shows all vertices that are reachable from any given vertex. We examine the correlary, given a Red Black adjacency matrix, $A_{rb}$, by computing the transitive closure, $A_{rb}^+$, that results not only in reachability, but explicit information about how one node is reachable from another, including number of edges required to traverse as well as the explicit traversal path. \n",
     "\n",
     "### Pedigree Numbers and Generations\n",
     "\n",
@@ -257,7 +254,7 @@
    "source": [
     "### Transitive Closure for Red-Black Adjacency Matrix\n",
     "\n",
-    "We will define the transitive closure of a Red-Black adjacency matrix, *A<sub>rb</sub>* as *A<sub>rb</sub><sup>+</sup>* such that element (i, j) is the *pedigree number* that represents the relationship between $vertex_{i}$ and $vertex_{j}$. Furthermore *A<sub>rb</sub><sup>+</sup>* can be computed from *A<sub>rb</sub>* using a modified Warshall Algorithm."
+    "We will define the transitive closure of a Red-Black adjacency matrix, $A_{rb}$ as $A_{rb}^+$ such that element (i, j) is the *pedigree number* that represents the relationship between $vertex_{i}$ and $vertex_{j}$. Furthermore $A_{rb}^+$ can be computed from $A_{rb}$ using a modified Warshall Algorithm."
    ]
   },
   {
@@ -308,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at the Red-Black adjacency matrix, *A<sub>rb</sub>*, for the following graph:\n",
+    "Let's look at the Red-Black adjacency matrix, $A_{rb}$, for the following graph:\n",
     "\n",
     "* vertex 0 - male offspring of vertex 1 and vertex 2\n",
     "* vertex 1 - male offspring of vertex 3 and unknown (not in graph)\n",
@@ -364,7 +361,7 @@
     "2 & 0 & 0 & 0 & 1 \\\\\n",
     "\\end{vmatrix}\n",
     "\n",
-    "Running this modified Warshall algorithm against this example matrix results in the following *A<sub>rb</sub><sup>+</sup>*:\n",
+    "Running this modified Warshall algorithm against this example matrix results in the following $A_{rb}^+$:\n",
     "\n",
     "\\begin{vmatrix}\n",
     "0 & 2 & 3 & 4 & 0 \\\\\n",
@@ -376,26 +373,26 @@
     "\n",
     "### Observations\n",
     "\n",
-    "Given *A<sub>rb</sub><sup>+</sup>*, observe that:\n",
+    "Given $A_{rb}^+$, observe that:\n",
     "\n",
     "* row vectors represent the ancestry view for a given vertex\n",
     "* column vectors represent descendency view for a given vertex\n",
     "* row vectors representing siblings will be identical\n",
     "* column vectors representing siblings will be independant if either of the siblings have offspring represented in the graph\n",
-    "* determining whether *x* is an ancestor of *y* is **O**(1) and provided by *A<sub>rb</sub><sup>+</sup>*\\[x, y\\]\n",
-    "* determining whether *x* is a descendant of *y* is **O**(1) and provided by *A<sub>rb</sub><sup>+</sup>*\\[y, x\\]\n",
-    "* diameter of the graph is given by generation(max(*A<sub>rb</sub><sup>+</sup>*\\[i, j\\]))"
+    "* determining whether *x* is an ancestor of *y* is **O**(1) and provided by $A_{rb}^+$\\[x, y\\]\n",
+    "* determining whether *x* is a descendant of *y* is **O**(1) and provided by $A_{rb}^+$\\[y, x\\]\n",
+    "* diameter of the graph is given by generation(max($A_{rb}^+$\\[i, j\\]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Calculating Relationship Between Two Rows in *A<sub>rb</sub><sup>+</sup>*\n",
+    "### Calculating Relationship Between Two Rows in $A_{rb}^+$\n",
     "\n",
-    "Given that row vectors in *A<sub>rb</sub><sup>+</sup>* provides the ancestry view for a given vertex, we can demonstrate a straight forward means of calculating relationship, or more specifically, the consanguinity between vertices. \n",
+    "Given that row vectors in $A_{rb}^+$ provides the ancestry view for a given vertex, we can demonstrate a straight forward means of calculating relationship, or more specifically, the consanguinity between vertices. \n",
     "\n",
-    "1. Given two row vectors from *A<sub>rb</sub><sup>+</sup>*, *u* and *v*, find the minimum of *u<sub>j</sub>* + v<sub>j</sub>* where both *u<sub>j</sub>* and v<sub>j</sub>* are non-zero. This yields two *pedigree numbers*, x and y, expressing the relationship of *u* and *v* to the nearest common ancestor, *vertex<sub>j-min</sub>\n",
+    "1. Given two row vectors from $A_{rb}^+$, *u* and *v*, find the minimum of *u<sub>j</sub>* + v<sub>j</sub>* where both *u<sub>j</sub>* and v<sub>j</sub>* are non-zero. This yields two *pedigree numbers*, x and y, expressing the relationship of *u* and *v* to the nearest common ancestor, *vertex<sub>j-min</sub>*\n",
     "2. Determine the generational distance to the common ancestor, d<sub>u</sub> = generation(x) and d<sub>v</sub> = generation(y).\n",
     "3. Using a Table of Consanguinity, calculate the relationship\n",
     "\n",
