Converted to diagonal == -1 if red, == 1 if black. (Removes most of the special cases) Added test cases

--- a/notebooks/LinearAlgebraForRedBlackGraphs.ipynb
+++ b/notebooks/LinearAlgebraForRedBlackGraphs.ipynb
@@ -12,10 +12,9 @@
     "## Vector Classes\n",
     "Within the context of a Red Black Graph and it's adjacency matrix, we define the following vector classes:\n",
     "\n",
-    "* *row* vector - represented by *u*. These vectors represent ancestry for a given vertex. Values for elements in these vectors are constrained to natural numbers. Any positive integer may appear in an element at most once. One may appear only if the vertex is black.\n",
-    "* *column* vector - represented by *v*. These vectors represent descendency for a given vertex. Values for elements in these vectors are also constrained to natural numbers. Furthermore if the vertex is red, they are constrained to even numbers, if the vertex is black, they are constrained to odd numbers (plus zero). One may appear only once, otherwise there are no constraints. \n",
-    "* *simple row vector* - represented by *u<sub>s</sub>*. Row vectors for which elements are constrained to {0, 1, 2, 3}. These represent a given vertex and it's immediate ancestry only.\n",
-    "* *simple column vector* - represented by *v<sub>s</sub>*. Column vectors for which elements are constrained to {0, 1, 2, 3}. These represent a given vertex and it's immediate descendency only.\n",
+    "* *row* vector - represented by *u*. These vectors represent ancestry for a given vertex. Values for elements in these vectors are constrained to all positive integers, 0 and 1. Any non-zero integer may appear in an element at most once. * *column* vector - represented by *v*. These vectors represent descendency for a given vertex. Values for elements in these vectors are also constrained to all positive integers, 0 and 1. Furthermore if the vertex is red, they are constrained to even numbers and -1, if the vertex is black, they are constrained to odd numbers (plus zero). 1 or -1 may appear only once, otherwise there are no constraints. \n",
+    "* *simple row vector* - represented by *u<sub>s</sub>*. Row vectors for which elements are constrained to {-1, 0, 1, 2, 3}. These represent a given vertex and it's immediate ancestry only.\n",
+    "* *simple column vector* - represented by *v<sub>s</sub>*. Column vectors for which elements are constrained to {-1, 0, 1, 2, 3}. These represent a given vertex and it's immediate descendency only.\n",
     "* *closed row vector* - represented by *u<sub>c</sub>*. Row vectors from $A_{rb}^+$. These represent the complete ancestry for a given vertex.\n",
     "* *closed column vector* - represented by *v<sub>c</sub>*. Column vectors from $A_{rb}^+$. These represent the complete descendency for a given vertex.\n",
     "\n",
@@ -26,10 +25,10 @@
     "Consider the Red Black adjacency matrix from our prior example:\n",
     "\n",
     "\\begin{vmatrix}\n",
-    "0 & 2 & 3 & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & 2 & 0 \\\\\n",
+    "-1 & 2 & 3 & 0 & 0 \\\\\n",
+    "0 & -1 & 0 & 2 & 0 \\\\\n",
     "0 & 0 & 1 & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & -1 & 0 \\\\\n",
     "2 & 0 & 0 & 0 & 1 \\\\\n",
     "\\end{vmatrix}\n",
     "\n",
@@ -57,16 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load ../redblackgraph/simple/vec_avos.py\n",
     "from redblackgraph.simple import avos\n",
     "\n",
+    "\n",
     "def vec_avos(x, y):\n",
     "    '''Given two vectors, compute the \"avos\" dot product.'''\n",
-    "    return min([avos(a, b) for a, b in zip(x, y) if a > 0 and b > 0], default=0)\n"
+    "    return min([e for e in [avos(a, b) for a, b in zip(x, y)] if e > 0], default=0)\n"
    ]
   },
   {
@@ -92,10 +92,7 @@
    "source": [
     "## Matrix multiplication\n",
     "\n",
-    "With scaler and vector *avos* products defined, extension to matrices is elementary. Given *A* and *B*, both matrices following the contraints defined for Red-Black adjacency matrices, and *C* = *A* *B*, the elements of $C_{ij}$ are given by:\n",
-    "* if i != j, the vector *avos* product of *row vector<sub>i</sub>* from A and *column vector<sub>j</sub>* from B\n",
-    "* if i == j and $A_{ij}$ == $B_{ij}$, $A_{ij}$\n",
-    "* otherwise, undefined.\n",
+    "With scaler and vector *avos* products defined, extension to matrices is elementary. Given *A* and *B*, both matrices following the contraints defined for Red-Black adjacency matrices, and *C* = *A* *B*, the elements of $C_{ij}$ are given by the vector *avos* product of *row vector<sub>i</sub>* from A and *column vector<sub>j</sub>* from B\n",
     "\n",
     "Matrix multiplication of Red-Black adjacency matrices may seem a little abstract so let's consider a practical example to motivate the analysis. Given a Red-Black adjacency matrix, *A<sub>rb</sub>*, the result of $A_{rb}^2$ shows all vertices directly related by following up to 2 relationship edges, the result of $A_{rb}^3$ shows all vertices related by following up to 3 relationship edges, etc. For some *n* <= |*V*| there will be a $A_{rb}^n$ == $A_{rb}^+$.\n",
     "\n",
@@ -104,36 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load ../redblackgraph/simple/mat_avos.py\n",
-    "from redblackgraph.simple import avos\n",
+    "from redblackgraph.simple import avos, vec_avos\n",
     "\n",
     "\n",
     "def mat_avos(A, B):\n",
     "    '''Given two matrices, compute the \"avos\" product.'''\n",
-    "    return [[min([avos(a, b) for a, b in zip(A_row, B_col) if a > 0 and b > 0], default=0) for B_col in zip(*B)] for\n",
-    "            A_row in A]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 0, 3, 4, 0], [0, 0, 0, 0, 0], [0, 0, 1, 0, 0], [0, 0, 0, 0, 0], [0, 4, 5, 0, 1]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "A = [[0, 2, 3, 0, 0], [0, 0, 0, 2, 0], [0, 0, 1, 0, 0], [0, 0, 0, 0, 0], [2, 0, 0, 0, 1]]\n",
-    "print(mat_avos(A, A))"
+    "    return [[min([avos(a, b) for a, b in zip(A_row, B_col) if not a == 0 and not b == 0], default=0) for B_col in zip(*B)] for A_row in A]\n"
    ]
   },
   {
