--- a/notebooks/redblackgraph.ipynb
+++ b/notebooks/redblackgraph.ipynb
@@ -114,7 +114,7 @@
     "### Observations\n",
     "\n",
     "\\begin{equation*}\n",
-    "|V_{black}| - |V_{red}| = trace(A_{rb})\n",
+    "trace(A_{rb}) = |V_{black}| - |V_{red}|\n",
     "\\end{equation*} "
    ]
   },
@@ -217,12 +217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load ../redblackgraph/simple/avos.py\n",
     "from redblackgraph.simple import generation\n",
+    "\n",
     "\n",
     "def avos(x, y):\n",
     "    '''The avos product is a transitive relationship operator.\n",
@@ -232,9 +233,11 @@
     "    This product should return the value indicating how a is related to c\n",
     "    '''\n",
     "\n",
-    "    # The domain of this function is all positive integers greater than 1\n",
+    "    # An interesting case is presented if x or y is 1 or -1. In these cases the avos product\n",
+    "    # represents the situation where a and b are the same vertex or b and c are the same vertex.\n",
+    "    # In a sense, this is the avos identity\n",
     "    if x <= 1 or y <= 1:\n",
-    "        raise ValueError(f'avos({x}, {y}) is not defined')\n",
+    "        return 0 if x == 0 or y == 0 else x if y == 1 or y == -1 else y\n",
     "\n",
     "    # There are some edge cases that need to be considered, namely what is meant\n",
     "    generationNumber = generation(y)\n",
@@ -259,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,18 +290,6 @@
     "                    W[i][j] = W[i][j]\n",
     "                diameter = max(diameter, W[i][j])\n",
     "    return W, generation(diameter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "hide_input": true
-   },
-   "outputs": [],
-   "source": [
-    "# from redblackgraph.simple import warshall\n",
-    "# print(warshall([[0,2,3,0,0],[0,0,0,2,0],[0,0,1,0,0],[0,0,0,0,0],[2,0,0,0,1]]))"
    ]
   },
   {
@@ -354,20 +345,20 @@
    "source": [
     "\n",
     "\\begin{vmatrix}\n",
-    "0 & 2 & 3 & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & 2 & 0 \\\\\n",
+    "-1 & 2 & 3 & 0 & 0 \\\\\n",
+    "0 & -1 & 0 & 2 & 0 \\\\\n",
     "0 & 0 & 1 & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & -1 & 0 \\\\\n",
     "2 & 0 & 0 & 0 & 1 \\\\\n",
     "\\end{vmatrix}\n",
     "\n",
     "Running this modified Warshall algorithm against this example matrix results in the following $A_{rb}^+$:\n",
     "\n",
     "\\begin{vmatrix}\n",
-    "0 & 2 & 3 & 4 & 0 \\\\\n",
-    "0 & 0 & 0 & 2 & 0 \\\\\n",
+    "-1 & 2 & 3 & 4 & 0 \\\\\n",
+    "0 & -1 & 0 & 2 & 0 \\\\\n",
     "0 & 0 & 1 & 0 & 0 \\\\\n",
-    "0 & 0 & 0 & 0 & 0 \\\\\n",
+    "0 & 0 & 0 & -1 & 0 \\\\\n",
     "2 & 4 & 5 & 8 & 1 \\\\\n",
     "\\end{vmatrix}\n",
     "\n",
@@ -412,18 +403,19 @@
     "# %load ../redblackgraph/simple/calc_relationship.py\n",
     "from redblackgraph.simple import generation\n",
     "\n",
+    "\n",
     "def lookup_relationship(du, dv):\n",
+    "    '''\n",
+    "    This is a very rudimentary implementation of a Consanguinity lookup and doesn't handle many cases\n",
+    "    correctly.\n",
+    "    :param du: generational distance from u to common ancestor\n",
+    "    :param dv: generational distance from v to common ancester\n",
+    "    :return: a string designating relationship\n",
+    "    '''\n",
     "    removal = abs(du - dv)\n",
     "    generational = min(du, dv)\n",
-    "\n",
-    "    if generational == 1:\n",
-    "        assert removal == 0\n",
-    "        return \"siblings\"\n",
-    "    if generational == 2 and not removal == 0:\n",
-    "        return \"aunt/uncle\"\n",
-    "    if removal == 0:\n",
-    "        return f\"{generational - 1} cousin\"\n",
     "    return f\"{generational - 1} cousin {removal} removed\"\n",
+    "\n",
     "\n",
     "def calculate_relationship(u, v):\n",
     "    '''\n",
@@ -434,7 +426,7 @@
     "    :return: (Relationship designation, common ancestor vertex)\n",
     "    '''\n",
     "\n",
-    "    common_ancestor, (x, y) = min([e for e in enumerate(zip(u, v)) if e[1][0] > 1 and e[1][1] > 1],\n",
+    "    common_ancestor, (x, y) = min([e for e in enumerate(zip(u, v)) if not e[1][0] == 0 and not e[1][1] == 0],\n",
     "                                  key=lambda x: x[1][0] + x[1][1],\n",
     "                                  default=(-1, (0, 0)))\n",
     "\n",
