Add nz_min utility function (non-zero minimum) Simply code using new utility function

--- a/notebooks/LinearAlgebraForRedBlackGraphs.ipynb
+++ b/notebooks/LinearAlgebraForRedBlackGraphs.ipynb
@@ -62,11 +62,11 @@
    "source": [
     "# %load ../redblackgraph/simple/vec_avos.py\n",
     "from redblackgraph.simple import avos\n",
-    "\n",
+    "from redblackgraph.simple.util import nz_min\n",
     "\n",
     "def vec_avos(x, y):\n",
     "    '''Given two vectors, compute the \"avos\" dot product.'''\n",
-    "    return min([e for e in [avos(a, b) for a, b in zip(x, y)] if e > 0], default=0)\n"
+    "    return nz_min([avos(a, b) for a, b in zip(x, y)])\n"
    ]
   },
   {
@@ -106,12 +106,13 @@
    "outputs": [],
    "source": [
     "# %load ../redblackgraph/simple/mat_avos.py\n",
-    "from redblackgraph.simple import avos, vec_avos\n",
+    "from redblackgraph.simple import avos\n",
+    "from redblackgraph.simple.util import nz_min\n",
     "\n",
     "\n",
     "def mat_avos(A, B):\n",
     "    '''Given two matrices, compute the \"avos\" product.'''\n",
-    "    return [[min([avos(a, b) for a, b in zip(A_row, B_col) if not a == 0 and not b == 0], default=0) for B_col in zip(*B)] for A_row in A]\n"
+    "    return [[nz_min([avos(a, b) for a, b in zip(A_row, B_col)]) for B_col in zip(*B)] for A_row in A]\n"
    ]
   },
   {
