--- a/notebooks/redblackgraph.ipynb
+++ b/notebooks/redblackgraph.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
     "    path = []\n",
     "    mask = 1\n",
     "    while (x > 1):\n",
-    "        path.insert(0, 'b') if x & mask else path.insert(0, 'r')\n",
+    "        path.insert(0, 'b' if x & mask else 'r')\n",
     "        x >>= 1\n",
     "    return path\n"
    ]
@@ -267,8 +267,8 @@
    "outputs": [],
    "source": [
     "# %load ../redblackgraph/simple/warshall.py\n",
-    "from redblackgraph.simple import generation\n",
-    "from redblackgraph.simple import avos\n",
+    "from redblackgraph.simple import avos, generation\n",
+    "from .util import nz_min\n",
     "\n",
     "\n",
     "def warshall(M):\n",
@@ -284,10 +284,7 @@
     "    for k in range(n):\n",
     "        for i in range(n):\n",
     "            for j in range(n):\n",
-    "                if W[i][k] > 1 and W[k][j] > 1:\n",
-    "                    W[i][j] = min(W[i][j], avos(W[i][k], W[k][j])) if not W[i][j] == 0 else avos(W[i][k], W[k][j])\n",
-    "                else:\n",
-    "                    W[i][j] = W[i][j]\n",
+    "                W[i][j] = nz_min(W[i][j], avos(W[i][k], W[k][j]))\n",
     "                diameter = max(diameter, W[i][j])\n",
     "    return W, generation(diameter)"
    ]
@@ -307,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "hide_input": true
    },
@@ -319,7 +316,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
